1.修改样式 2.添加logo 3.添加头部锚标签链接 4.完成搜索高亮

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-nav",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/page/e-nav",
   "dependencies": {
     "antd": "^2.10.1",
     "axios": "^0.16.1",
